# OCTA-mosaic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: create_mosaics.ipynb
scripts/: run_differential_evolution.py  run_template_matching.py
src/octa_mosaic/: __init__.py
src/octa_mosaic/builders/: template_matching_builder.py
src/octa_mosaic/data/: __init__.py  dataset.py  dataset_case.py
src/octa_mosaic/experiments/: constants.py  encoders.py
src/octa_mosaic/experiments/data/: dataset.py  dataset_case.py
src/octa_mosaic/experiments/stages/: mosaicking_creation.py  mosaicking_optimization.py
src/octa_mosaic/experiments/utils/: constants.py  plots.py
src/octa_mosaic/image_utils/: image_metrics.py  image_operations.py  image_similarity.py  template_matching.py
src/octa_mosaic/modules/: evolutionary.py  mosaic.py  mosaic_TM_register.py  mosaic_tm_register_MB.py  mosaico.py  mosaico_TM_register.py  mosaico_tm_register_MB.py  optimization_utils.py  optimize_solution.py  template_matching.py
src/octa_mosaic/modules/experiments/: initialize_population.py  mosaicking_creation.py  mosaicking_optimization.py  population_initializers.py  procedure.py
src/octa_mosaic/modules/optimization/: differential_evolution.py  evaluate.py  iteration_state.py  optimize_result.py  problem.py
src/octa_mosaic/mosaic/: mosaic.py  mosaic_metrics.py  mosaic_processor.py  mosaic_utils.py
src/octa_mosaic/optimization/: iteration_state.py  optimize_result.py  population_utils.py  problem.py
tests/octa_mosaic/image_utils/: test_image_similarity.py
(+13 files in other folders)
