[tool.poetry]
name = "octa-mosaic"
version = "0.1.0"
description = ""
authors = ["javimdr <javimdr93@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "octa_mosaic", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.19.5"
scikit-image = "0.18.3"
opencv-python-headless = "^4.5"
matplotlib = "3.3.4"
seaborn = "0.11.1"
tqdm = "^4.57"
pyyaml = "^5.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"

[tool.black]
line-length = 89

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
